Refactor/menu role (#13)
* refactoring menu role

* polish admin/user

* refactoring admin (user, role, menu, mesage...)

* refactoring admin (user, role, menu, mesage...)

* polish

* refactor: polish code, variable

* refactoring